# goose-discord

./: .env.example  .gitignore  CODEOWNERS  DEVELOPMENT.md  Dockerfile  GOOSE_HELP_ENHANCEMENT.md  QUICKSTART.md  README.md  SLASH_COMMANDS_TROUBLESHOOTING.md  debug_bot.py  docker-compose.yml  goose_help.yaml  goose_help_recipe.py  goose_session.yaml  pyproject.toml  run_bot.py  setup.sh  test_goose.py
recipes/: goose_help.yaml
src/agent_honk/: __init__.py  bot.py  goose_client.py  thread_manager.py
tests/: __init__.py  test_thread_manager.py
